<resources>
    <string name="app_name">Temerso</string>
    <string name="enterLogin">Введите логин и пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="loading">Загрузка</string>
    <string name="home">Главная</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Задания</string>
    <string name="_0042515">0042515</string>
    <string name="add_warning">Вы сохраняете задачу и берете на выполнение?</string>
    <string name="scan">Скан</string>
    <string name="add_over">Добавить излишек</string>
    <string name="send_to_check">Отправить сформированный комплект на сервер</string>
    <string name="save">Сохранить</string>
    <string name="add_over_card">Добавление данных об излишке:</string>
    <string name="add_comment">Добавить комментарии</string>
    <string name="add_nipple">Добавить № ниппеля</string>
    <string name="add_pipe">Добавить № трубы</string>
    <string name="add_rfid">Добавить № RFID</string>
    <string name="detail_about_card">Информация о карточке</string>
    <string name="empty_add">Пусто, создайте комплект</string>
    <string name="gold_fish">На берегу моряал ловить в морсего-наросил он золотую рыбк. Пожалел я её, не взял с неё выкупа, на волю пустил. - Ах ты, дурак! Попалось тебе в руки счастье, а ты и владеть им не сумел!</string>
    <string name="comment">Комментарии</string>
    <string name="create_kit">Создание комплекта для постановщика задач:</string>
    <string name="add_couple">Добавить № муфты</string>
    <string name="add_number">Добавить серийный №</string>
    <string name="add_about_card">Добавление данных о карте</string>
    <string name="app_version">0.0.4v 02.12.20</string>
    <string name="app_version_date">16.11.2020</string>
    <string name="edit_over_card">Изменить данные излишка</string>
</resources>
