<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginHorizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Добавить № трубы"
                        android:textColor="@color/blackColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_nipple"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/add_nipple"
                        android:textColor="@color/blackColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_couple"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/add_couple"
                        android:textColor="@color/blackColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_rfid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:hint="@string/add_rfid"
                        android:inputType="none"
                        android:textColor="@color/blackColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/search_scan_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginHorizontal"
                    android:background="@drawable/bg_main_button"
                    android:text="Сканирование"
                    android:textColor="@color/whiteColor" />

                <Button
                    android:id="@+id/search_send_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_blue_button"
                    android:text="Поиск"
                    android:textColor="@color/whiteColor" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginHorizontal"
            app:layout_constraintTop_toBottomOf="@id/search_container">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_search" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>